--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Challenge 2</title>
+    <title>Employee</title>
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
 </head>
@@ -25,39 +25,39 @@
             <h1>Work</h1>
             <section>
                 <h2>Surf Report</h2>
-                <img/>
+                <img src="images/1-shutterstock_114374386.jpg" alt="digital void shutterstock img"/>
                 <h3>MERN Stack</h3>
             </section>
             <section>
                 <h2>LED Wall</h2>
-                <img/>
+                <img src="images/2-shutterstock_170236112.jpg" alt="blurry lights shutterstock img"/>
                 <h3>Node/IoT</h3>
             </section>
             <section>
                 <h2>Calculator</h2>
-                <img/>
+                <img src="images/3-shutterstock_332391011.jpg" alt="snowflakes shutterstock img"/>
                 <h3>React/JavaScript/CSS</h3>
             </section>
             <section>
                 <h2>Pastel Puzzles</h2>
-                <img/>
+                <img src="images/4-shutterstock_60871054.jpg" alt="blue watercolour shutterstock img"/>
                 <h3>MERN Stack</h3>
             </section>
             <section>
                 <h2>Run Buddy</h2>
-                <img/>
+                <img src="images/5-shutterstock_234548032.jpg" alt="grains shutterstock img"/>
                 <h3>HTML/CSS</h3>
             </section>
         </article>
-        <section>
+        
+    </main>
+    <footer>
             <h1>Contact Me</h1>
             <p>Number</p>
             <p>Email</p>
             <p>Github</p>
             <p>Twitter</p>
             <p>Spotify</p>
-        </section>
-    </main>
-    <footer></footer>
+    </footer>
 </body>
 </html>
