--- a/index.html
+++ b/index.html
@@ -18,46 +18,50 @@
     </header>
     <main>
         <section>
-            <h1>About Me</h1>
+            <h1 class="header">About Me</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam vel consequatur nisi vitae labore ea eveniet, dolor excepturi placeat possimus, incidunt fugiat necessitatibus illum optio quasi delectus. Delectus, repellendus cum!</p>
         </section>
         <article>
-            <h1>Work</h1>
-            <section>
-                <h2>Surf Report</h2>
-                <img src="images/1-shutterstock_114374386.jpg" alt="digital void shutterstock img"/>
-                <h3>MERN Stack</h3>
-            </section>
-            <section>
-                <h2>LED Wall</h2>
-                <img src="images/2-shutterstock_170236112.jpg" alt="blurry lights shutterstock img"/>
-                <h3>Node/IoT</h3>
-            </section>
-            <section>
-                <h2>Calculator</h2>
-                <img src="images/3-shutterstock_332391011.jpg" alt="snowflakes shutterstock img"/>
-                <h3>React/JavaScript/CSS</h3>
-            </section>
-            <section>
-                <h2>Pastel Puzzles</h2>
-                <img src="images/4-shutterstock_60871054.jpg" alt="blue watercolour shutterstock img"/>
-                <h3>MERN Stack</h3>
-            </section>
-            <section>
-                <h2>Run Buddy</h2>
-                <img src="images/5-shutterstock_234548032.jpg" alt="grains shutterstock img"/>
-                <h3>HTML/CSS</h3>
-            </section>
+            <h1 class="header">Work</h1>
+            <div class="flex-container">
+                <section>
+                    <h2>Surf Report</h2>
+                    <img class= 'digital void' src="images/1-shutterstock_114374386.jpg" alt="digital void shutterstock img"/>
+                    <h3>MERN Stack</h3>
+                </section>
+                <section>
+                    <h2>LED Wall</h2>
+                    <img src="images/2-shutterstock_170236112.jpg" alt="blurry lights shutterstock img"/>
+                    <h3>Node/IoT</h3>
+                </section>
+                <section>
+                    <h2>Calculator</h2>
+                    <img src="images/3-shutterstock_332391011.jpg" alt="snowflakes shutterstock img"/>
+                    <h3>React/JavaScript/CSS</h3>
+                </section>
+                <section>
+                    <h2>Pastel Puzzles</h2>
+                    <img src="images/4-shutterstock_60871054.jpg" alt="blue watercolour shutterstock img"/>
+                    <h3>MERN Stack</h3>
+                </section>
+                <section>
+                    <h2>Run Buddy</h2>
+                    <img src="images/5-shutterstock_234548032.jpg" alt="grains shutterstock img"/>
+                    <h3>HTML/CSS</h3>
+                </section>
+            </div>
         </article>
         
     </main>
     <footer>
-            <h1>Contact Me</h1>
-            <p>Number</p>
-            <p>Email</p>
-            <p>Github</p>
-            <p>Twitter</p>
-            <p>Spotify</p>
+            <h1 class="header">Contact Me</h1>
+            <section class="container"> 
+                <p>Number</p>
+                <p>Email</p>
+                <p>Github</p>
+                <p>Twitter</p>
+                <p>Spotify</p>
+            </section>
     </footer>
 </body>
 </html>
