css changes made

--- a/index.html
+++ b/index.html
@@ -10,57 +10,62 @@
 </head>
 <body>
     <header>
-        <h1>Lernantino</h1>
-        <h2>About Me</h2>
-        <h2>Work</h2>
-        <h2>Contact Me</h2>
-        <h2>Resume</h2>
+        <h1>Julie Kim
+<img id="avatar" src="images/pixabay-pokemon-gdac63deeb_640.png" alt="pikachu avatar"/>
+        </h1>
+        <div>
+            <ul>
+                <li><a href="#About-Me">About Me</a></li>
+                <li><a href="#Work">Work</a></li>
+                <li><a href="#Contact-Me">Contact Me</a></li>
+                <li>Resume  </li>
+            </ul>
+        </div>
     </header>
-    <main>
+    
+        <main>
         <section>
-            <h1 class="header">About Me</h1>
+            <h1 class="header" id="About-Me">About Me</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam vel consequatur nisi vitae labore ea eveniet, dolor excepturi placeat possimus, incidunt fugiat necessitatibus illum optio quasi delectus. Delectus, repellendus cum!</p>
         </section>
         <article>
-            <h1 class="header">Work</h1>
-            <div class="flex-container">
-                <section>
-                    <h2>Surf Report</h2>
-                    <img class= 'digital void' src="images/1-shutterstock_114374386.jpg" alt="digital void shutterstock img"/>
-                    <h3>MERN Stack</h3>
+            <h1 class="header" id="Work">Work</h1>
+                <section class="container">
+                    <h2 class="topic">Surf Report</h2>
+                    <img id="digitalvoid" src="images/1-shutterstock_114374386.jpg" alt="digital void shutterstock img"/>
+                    <h3 class="subtopic">MERN Stack</h3>
                 </section>
-                <section>
-                    <h2>LED Wall</h2>
+                <section class="container">
+                    <h2 class="topic">LED Wall</h2>
                     <img src="images/2-shutterstock_170236112.jpg" alt="blurry lights shutterstock img"/>
-                    <h3>Node/IoT</h3>
+                    <h3 class="subtopic">Node/IoT</h3>
                 </section>
-                <section>
-                    <h2>Calculator</h2>
+                <section class="container">
+                    <h2 class="topic">Calculator</h2>
                     <img src="images/3-shutterstock_332391011.jpg" alt="snowflakes shutterstock img"/>
-                    <h3>React/JavaScript/CSS</h3>
+                    <h3 class="subtopic">React/JavaScript/CSS</h3>
                 </section>
-                <section>
-                    <h2>Pastel Puzzles</h2>
+                <section class="container">
+                    <h2 class="topic">Pastel Puzzles</h2>
                     <img src="images/4-shutterstock_60871054.jpg" alt="blue watercolour shutterstock img"/>
-                    <h3>MERN Stack</h3>
+                    <h3 class="subtopic">MERN Stack</h3>
                 </section>
-                <section>
-                    <h2>Run Buddy</h2>
+                <section class="container">
+                    <h2 class="topic">Run Buddy</h2>
                     <img src="images/5-shutterstock_234548032.jpg" alt="grains shutterstock img"/>
-                    <h3>HTML/CSS</h3>
+                    <h3 class="subtopic">HTML/CSS</h3>
                 </section>
-            </div>
         </article>
         
     </main>
     <footer>
-            <h1 class="header">Contact Me</h1>
+            <h1 class="header" id="Contact-Me">Contact Me</h1>
             <section class="container"> 
-                <p>Number</p>
-                <p>Email</p>
-                <p>Github</p>
-                <p>Twitter</p>
-                <p>Spotify</p>
+                <a href="/Users/juliekim/Desktop/BCS/challenge2take2/phonenumber.html">Number</a>
+                <a href= "mailto:prettytweety2000@gmail.com">Email</a>
+                <a href="https://github.com/juliekim23">Github</a>
+                <a href="https://www.instagram.com/juliexkim231/">Instagram</a>
+                <a href="https://www.linkedin.com/in/julie-kim21/">LinkedIn</a>
             </section>
     </footer>
 </body>
