--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
             </ul>
         </div>
     </header>
-    
         <main>
         <section>
             <h1 class="header" id="About-Me">About Me</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam vel consequatur nisi vitae labore ea eveniet, dolor excepturi placeat possimus, incidunt fugiat necessitatibus illum optio quasi delectus. Delectus, repellendus cum!</p>
         </section>
-        <article>
+        <article class="flex-container">
             <h1 class="header" id="Work">Work</h1>
                 <section class="container">
                     <h2 class="topic">Surf Report</h2>
